plugins/javaFX/testData/highlighting/propertyTagIncompatibleClass.fxml
<?import javafx.geometry.Insets?>
<?import javafx.scene.layout.Priority?>
<?import javafx.scene.layout.VBox?>
<?import javafx.scene.paint.Color?>
<?import javafx.scene.shape.Rectangle?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <Rectangle width="100" height="100">
        <VBox.margin>
            <<error descr="Unable to coerce javafx.scene.paint.Color to javafx.geometry.Insets">Color</error> green="1"/>
        </VBox.margin>
    </Rectangle>
    <padding>
        <<error descr="Unable to coerce javafx.scene.layout.Priority to javafx.geometry.Insets">Priority</error> fx:value="always"/>
    </padding>
</VBox>